Fix white space on cellphone screen

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+html,
 body {
-  overflow-x: hidden;
+  width: 100% !important;
+  height: 100% !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  overflow-x: hidden !important;
+  z-index: -1;
 }
 
 .particles {
@@ -96,6 +102,10 @@ nav a {
   color: white;
   transition: all 0.2s;
   text-transform: uppercase;
+}
+
+.aboutwrap {
+  background-color: white;
 }
 
 .fixed-nav nav {
@@ -195,6 +205,7 @@ ul {
 
 .projectswrap {
   min-height: 100vh;
+  background-color: white;
 }
 
 *,
